--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: dcassol
-head: dcassol
-author: Daniela Cassol
+title: christos-stamatis
+head: christos-stamatis
+author: Christos Stamatis
 description: 
 ---
